kubernetes/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            containers:
                -   name: postgres
                    image: postgres:15.2
                    ports:
                        - containerPort: 5432
                    volumeMounts:
                        -   name: pg-data
                            mountPath: /var/lib/postgresql
            restartPolicy: Always
            volumes:
                -   name: pg-data
                    persistentVolumeClaim:
                        claimName: pg-data
