kubernetes/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            app: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: redis
        spec:
            containers:
                -   name: redis
                    image: redis:7.0.10
                    ports:
                        - containerPort: 6379
                    volumeMounts:
                        -   name: redis-data
                            mountPath: /data
            restartPolicy: Always
            volumes:
                -   name: redis-data
                    persistentVolumeClaim:
                        claimName: redis-data
