kubernetes/wallets.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wallets
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: wallets
spec:
    replicas: 1
    selector:
        matchLabels:
            app.kubernetes.io/name: kubernetes-microservices
            app.kubernetes.io/component: wallets
    template:
        metadata:
            labels:
                app.kubernetes.io/name: kubernetes-microservices
                app.kubernetes.io/component: wallets
        spec:
            containers:
                -   name: wallets
                    image: alexgudkov/kubernetes-microservices-wallets
                    imagePullPolicy: IfNotPresent
                    ports:
                        -   name: port-3003
                            containerPort: 3003
            restartPolicy: Always
