kubernetes/auth.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: auth
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: auth
spec:
    type: ClusterIP
    selector: 
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: auth
    ports:
        -   name: port-3001
            protocol: TCP
            port: 3001
            targetPort: port-3001
