kubernetes/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    selector: 
            app: redis
    ports:
        -   name: port-6379
            protocol: TCP
            port: 6379
            targetPort: 6379
