kubernetes/rabbitmq.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    selector: 
            app: rabbitmq
    ports:
        -   name: port-15672
            protocol: TCP
            port: 15672
            targetPort: 15672
        -   name: port-5672
            protocol: TCP
            port: 5672
            targetPort: 5672
