kubernetes/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: redis
spec:
    type: ClusterIP
    selector: 
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: redis
    ports:
        -   name: port-6379
            protocol: TCP
            port: 6379
            targetPort: port-6379
