kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kubernetes-microservices
spec:
    selector:
        app: kubernetes-microservices
    ports:
        -   protocol: HTTP
            port: 3001
        -   protocol: HTTP
            port: 3002
        -   protocol: HTTP
            port: 3003
    type: LoadBalancer
