kubernetes/auth.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: auth
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: auth
spec:
    rules:
        # use valid DNS name that resolves to the load balancer external ip
        -   host: "rm-corporate.ru"
            http:
                paths:
                    -   path: "/"
                        pathType: Prefix
                        backend:
                            service:
                                name: auth
                                port:
                                    name: port-auth
