kubernetes/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-nginx
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: ingress-nginx
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        -   http:
                paths:
                    -   path: /m1/(.*)
                        pathType: Prefix
                        backend:
                            # service to access
                            service:
                                name: auth
                                # port which service is exposing
                                port:
                                    number: 3001
