kubernetes/ingress-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-nginx
    labels:
        app.kubernetes.io/name: kubernetes-microservices
        app.kubernetes.io/component: ingress-nginx
spec:
    rules:
        -   http:
                paths:
                    # matches all paths starting with '/auth'
                    -   path: /auth
                        pathType: Prefix
                        backend:
                            # service to access
                            service:
                                name: auth
                                # port which service is exposing
                                port:
                                    number: 3001
                    -   path: /users
                        pathType: Prefix
                        backend:
                            service:
                                name: users
                                port:
                                    number: 3002
                    -   path: /wallets
                        pathType: Prefix
                        backend:
                            service:
                                name: wallets
                                port:
                                    number: 3003
